# shapelets-compute

./: .gitattributes  .gitignore  .gitmodules  .python-version  Build.md  Building.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE.MD  MANIFEST.in  README.md  auditwheel_patch.py  azure-pipelines.yml  configure.json  configure.py  entrypoint-build-wheels.sh  octave-workspace  pyproject.toml  pytest.ini  requirements-demos.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: AutoVcpkg.cmake  LocalArrayFire.cmake  linux_arrayfire.sh  macos_arrayfire.sh  setup_af.json  setup_af.py  vcpkg-bootstrap.cmake
demos/: classification.py  clustering copy.py  clustering.py  entsoe_data.py  regime_changes.py  search.ipynb  search.py  semantic_segmentation.py  summarization.py  visualization.py
doc/: Function Catalogue.xlsx  Makefile  conf.py  contents.rst
doc/_static/: shapelets-styled.css  shapelets.css
doc/_templates/: indexcontent.html  indexsidebar.html  layout.html
doc/reference/: arr_routines.binary.rst  arr_routines.construction.rst  arr_routines.device.rst  arr_routines.distances.rst  arr_routines.linearalg.rst  arr_routines.logic.rst  arr_routines.manipulation.rst  arr_routines.math.rst  arr_routines.padding.rst  arr_routines.random.rst  arr_routines.rst  arr_routines.set.rst  arr_routines.signalproc.rst  arr_routines.special.rst  arr_routines.ssc.rst  arr_routines.statistics.rst  arr_routines.ts.rst  index.rst  routines.binary.rst  routines.construction.rst  routines.device.rst  routines.distances.rst  routines.linearalg.rst  routines.logic.rst  routines.manipulation.rst  routines.math.rst  routines.random.rst  routines.rst  routines.set.rst  routines.signalproc.rst  routines.ssc.rst  routines.statistics.rst  routines.ts.rst  shapeletsarray.rst  ts_routines.normalization.rst  ts_routines.rst
doc/user/: backend.rst  index.rst  installguide.rst  license.rst  shapeletsarray.rst  tutorial_kshape.rst  tutorial_searching.rst  tutorial_visualization.rst  tutorials.rst  whatissc.rst
docker/: Dockerfile
etc/: InternalBleeding.txt  anomalies.py  cac.py  dimensionality.py  interactive.py  linux_arrayfire.sh  macos_arrayfire.sh  mpdist.py  queen.csv  sigproc.py  simply.py  snippets.py  statistics.py  understanding_mass.py  vanilla_ice.csv
licenses/: ArrayFire_License.txt
modules/algorithms/: CMakeLists.txt
modules/algorithms/include/: algos.h
modules/algorithms/include/algos/: array.h  clustering.h  defines.h  dimensionality.h  distances.h  features.h  filters.h  library.h  linalg.h  matrix.h  normalization.h  polynomial.h  regression.h  regularization.h  statistics.h  utils.h  version.h  version.h.in
modules/algorithms/include/algos/internal/: libraryInternal.h  matrixInternal.h  scopedHostPtr.h  util.h  vectorUtil.h
modules/algorithms/src/: array.cpp  clustering.cpp  dimensionality.cpp  distances.cpp  features.cpp  filters.cpp  library.cpp  libraryInternal.cpp  linalg.cpp  matrix.cpp  matrixInternal.cpp  normalization.cpp  polynomial.cpp  regression.cpp  regularization.cpp  statistics.cpp  util.cpp  version.cpp
modules/benchmarks/: bench_mp.py
modules/ext_scamp/: CMakeLists.txt
modules/gauss/: CMakeLists.txt
modules/gauss/include/: gauss.h
modules/gauss/include/gauss/: clustering.h  defines.h  dimensionality.h  distances.h  features.h  fft.h  filters.h  linalg.h  matrix.h  normalization.h  polynomial.h  random.h  regression.h  regularization.h  statistics.h  utils.h
modules/gauss/include/gauss/internal/: libraryInternal.h  matrixInternal.h  scopedHostPtr.h  util.h  vectorUtil.h
modules/gauss/src/: clustering.cpp  dimensionality.cpp  distances.cpp  features.cpp  fft.cpp  filters.cpp  libraryInternal.cpp  linalg.cpp  matrix.cpp  matrixInternal.cpp  normalization.cpp  polynomial.cpp  random.cpp  regression.cpp  regularization.cpp  statistics.cpp  util.cpp
modules/pygauss/: CMakeLists.txt
modules/pygauss/include/: array_like.h  formatters.h  half.hpp  pygauss.h  templates.h  typecasters.h
modules/pygauss/include/af_array/: af_array.h  algorithms.h  array_obj.h  batches.h  complex.h  construction.h  conversions.h  device.h  enums.h  errors.h  extract_transform.h  index_slicing.h  informative.h  linear_algebra.h  logic.h  math.h  numpy.h  random.h  signal_processing.h  statistics.h  templates.h
modules/pygauss/src/: algorithms.cpp  array_like.cpp  array_like_af.cpp  array_like_arrow.cpp  array_like_index_slicing.cpp  array_like_numpy.cpp  array_like_python.cpp  array_obj.cpp  batches.cpp  clustering.cpp  construction.cpp  device.cpp  enums.cpp  errors.cpp  extract_transform.cpp  gauss_dimensionality.cpp  gauss_distances.cpp  gauss_matrix.cpp  gauss_normalization.cpp  gauss_statistics.cpp  linear_algebra.cpp  logic.cpp  math.cpp  pygauss.cpp  random.cpp  signal_processing.cpp  statistics.cpp
modules/pygauss/src/af_array/: af_array.cpp  algorithms.cpp  array_obj.cpp  batches.cpp  complex.cpp  construction.cpp  conversions.cpp  device.cpp  enums.cpp  errors.cpp  extract_transform.cpp  index_slicing.cpp  informative.cpp  linear_algebra.cpp  logic.cpp  math.cpp  numpy.cpp  random.cpp  statistics.cpp
modules/pygauss/stub/: stub.cpp
modules/pygauss/test/: test_bench_matrixprofile.py
modules/python/: CMakeLists.txt
modules/python/include/: khiva_python.h
modules/python/include/af_array/: algorithms.h  array_obj.h  batches.h  complex.h  construction.h  device.h  enums.h  extract_transform.h  informative.h  linear_algebra.h  math.h  numpy.h  random.h  signal_processing.h  statistics.h
modules/python/src/: khiva_python.cpp
modules/python/src/af_array/: af_array.cpp  array_obj.cpp  batches.cpp  complex.cpp  construction.cpp  conversions.cpp  device.cpp  enums.cpp  errors.cpp  extract_transform.cpp  index_slicing.cpp  informative.cpp  math.cpp  numpy.cpp  random.cpp  signal_processing.cpp
modules/scripts/: shapelets
modules/shapelets/: __init__.py  __init__.pyi  __main__.py  _cli.py  _version.py  _version.pyi  pygauss.pyi  (+2 more)
(+138 files in other folders)
