
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = modules/shapelets/_version.py
versionfile_build = shapelets/_version.py
tag_prefix = v
parentdir_prefix =

[aliases]
test = pytest

[metadata]
name = shapelets-compute
maintainer = Shapelets Developers
maintainer_email = info@shapelets.io
description = Shapelets Compute is an accelerated platform for time series analysis.
long_description = file: README.md
url = https://shapelets.io
author = Justo Ruiz Ferrer et al.
author_email = info@shapelets.io
download_url = https://pypi.python.org/pypi/shapelets
platforms = ["windows", "Linux", "Mac OS", "Unix"]
zip_safe = False
include_package_data=True
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Typing :: Typed
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
